# maxbot-cpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
conan/: conanfile.py
include/: MaxBot.hpp
src/: main.cpp
